# gcsim_run_config

./: .gitignore  README.md  configs  configs.schema.json  pyproject.toml
.devcontainer/: devcontainer.json
gcsim_batcher/: __init__.py  config.py  generate.py  run.py
gcsim_linux_amd64/: pyproject.toml
gcsim_linux_amd64/gcsim/: __init__.py
gcsim_run_config/: artifacts.py  batch.py  config.py  generate.py  generate_batch.py  optimizer.py  run.py  util.py  weapons.py
gcsim_run_config/configs/: artifact.txt  bow.txt  catalyst.txt  claymore.txt  polearm.txt  sword.txt
gcsim_windows_amd64/: pyproject.toml
gcsim_windows_amd64/gcsim/: __init__.py
tests/: ChevSaraBen.txt  plain_artifacts  same_character.yaml  test_artifacts.py  test_config.py  test_generate.py
