[project]
name = "gcsim-batcher"
version = "0.1.21"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "gcsim-linux-amd64 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "gcsim-windows-amd64 ; platform_machine == 'AMD64' and sys_platform == 'win32'",
    "yamlcore>=0.0.4",
]

[project.scripts]
gcsim = "gcsim_batcher:gcsim"
gcsim-generate-batch = "gcsim_batcher.generate:main"
gcsim-optimizer = "gcsim_batcher.optimizer:main"
gcsim-run-batch = "gcsim_batcher.run:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "gcp-index"
url = "https://oauth2accesstoken@us-west1-python.pkg.dev/gaymer-haus/python-public/simple/"
publish-url = "https://oauth2accesstoken@us-west1-python.pkg.dev/gaymer-haus/python-public"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
