[project]
name = "gcsim-windows-amd64"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mario Guerrieri", email = "mario@guerrieri.codes" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]
keyring-provider = "subprocess"

[tool.uv.build-backend]
module-root = ""
module-name = "gcsim"

[[tool.uv.index]]
name = "gcp-index"
url = "https://oauth2accesstoken@us-west1-python.pkg.dev/gaymer-haus/python-public/simple/"
publish-url = "https://oauth2accesstoken@us-west1-python.pkg.dev/gaymer-haus/python-public"
